
2021-04-15  Franz Holzinger  <franz@ttproducts.de>
    * bugfix issue #1: No ROOT element found in flex form definition. XML element s_general has not been closed.

2020-08-07  Franz Holzinger  <franz@ttproducts.de>
    * bugfix in tt_content TCA addPlugin and others.

2020-01-17  Franz Holzinger  <franz@ttproducts.de>
    * add CSS comment to README.md.
    * remove the legend of the search form
    * remove the template.html

2020-01-15  Franz Holzinger  <franz@ttproducts.de>
    * remove unnecessary parts of the template. This extension is only for the search form and not the list.

2020-01-11  Franz Holzinger  <franz@ttproducts.de>
    * add the Resources from Indexed Search TYPO3 8.7.27
    * renew the configuration: setup.txt lib.macina_searchbox
    * add a constants.txt
    * remove the wizard and remove the plugin
    * update the template file for Indexed Search as Fluid Extension

2019-10-03  Franz Holzinger  <franz@ttproducts.de>
    * add a wizard
    * modification according to the Coding Guidelines
    * Replace the XML file locallang.xml by the files locallang.xlf de.locallang.xlf fi.locallang.xlf it.locallang.xlf pl.locallang.xlf
    * Replace the XML files locallang.xml and locallang_db.xml by the XLF files locallang.xlf locallang_db.xlf de.locallang_db.xlf  de.locallang.xlf  fi.locallang_db.xlf  fi.locallang.xlf it.locallang_db.xlf it.locallang.xlf pl.locallang_db.xlf pl.locallang.xlf
    * Replace the files locallang.php and locallang_db.php by the XML files locallang.xml and locallang_db.xml

2019-10-03  Franz Holzinger  <franz@ttproducts.de>
    * Initial version as fork from macina_searchbox 2.2.0 by Wolfgang Becker