@@ -5,7 +5,7 @@
 		<body>
 			<trans-unit id="tt_content.list_type" xml:space="preserve" approved="yes">
 				<source>Searchbox</source>
-				<target>Searchbox</target>
+				<target>ricerca box</target>
 			</trans-unit>
 		</body>
 	</file>
